fix: rename the providers and move list into api definition
